...
    <string name="test_teos2_kommentaar" translatable="false">Õpetaja andis mõtte</string>
    <string name="test_teos2_h1_nimi" translatable="false">TII HI</string>
    <string name="test_teos2_h2_nimi" translatable="false">TII HII</string>
    <string name="test_teos2_h3_nimi" translatable="false">TII HIII S</string>
    <string name="test_teos2_h4_nimi" translatable="false">TII HIV</string>

    <string name="test_teos3_nimi" translatable="false">Testteos III</string>
    <string name="test_teos3_autor" translatable="false">Oskar Märtin</string>
    <string name="test_teos3_kommentaar" translatable="false">Õhtul tinistades tuli mõte</string>
    <string name="test_teos3_h1_nimi" translatable="false">TIII HI</string>
    <string name="test_teos3_h2_nimi" translatable="false">TIII HII</string>
    <string name="test_teos3_h3_nimi" translatable="false">TIII HIII</string>
    <string name="test_teos3_h4_nimi" translatable="false">TIII HIV</string>
    <string name="test_teos3_h5_nimi" translatable="false">TIII HV</string>
    <string name="test_teos3_h6_nimi" translatable="false">TIII HVI</string>
    <string name="test_teos3_h7_nimi" translatable="false">TIII HVII</string>
    <string name="test_teos3_h8_nimi" translatable="false">TIII HVIII</string>
    <string name="test_teos3_h9_nimi" translatable="false">TIII HIX</string>
    <string name="test_teos3_h10_nimi" translatable="false">TIII HX</string>
    <string name="test_teos3_h11_nimi" translatable="false">TIII HXI</string>
    <string name="test_teos3_h12_nimi" translatable="false">TIII HXII</string>
    <string name="test_teos3_h13_nimi" translatable="false">TIII HXIII</string>

    <string name="test_teos4_nimi" translatable="false">Testteos IV</string>
...
