...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:singleLine="false"
                android:id="@+id/harjutusekirjeldus"
                android:hint="@string/harjutuse_mida_harjutasid_vihje"
                android:maxLength="64"
                android:inputType="textCapSentences|textMultiLine"/>
            <TableLayout android:id="@+id/harjutuseandmed"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
...
                          android:text="@string/harjutus_algas"/>
                <TextView android:id="@+id/alguskuupaev"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          style="@android:style/Widget.Holo.Spinner"/>
                <TextView android:id="@+id/alguskellaaeg"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          style="@android:style/Widget.Holo.Spinner"/>
            </TableRow>

            <TableRow android:layout_width="wrap_content"
...
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          android:text="@string/harjutuse_kestus"/>
                <TextView android:id="@+id/pikkusminutites"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="@dimen/tekstilahtri_aaris"
                          style="@android:style/Widget.Holo.Spinner"
                          android:text=""/>
                <TextView android:layout_width="wrap_content"
...
