...
    <string name="kusututa">Delete exercise…</string>
    <string name="AlustaUutHarjutust">Start exercise…</string>
    <string name="LisaTehtudHarjutus">Add exercise …</string>


    <!-- Select month for report -->
    <string name="vali_aruande_kuu">Pick month</string>
    <integer name="kuudearv">6</integer>

    <!-- Buttons -->
    <string name="ok">OK</string>
    <string name="loobu">Cancel</string>
    <string name="jah">Yes</string>
...
