...
            android:background="@android:color/white"/>
    <View   android:id="@+id/aluminejoon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eraldusjoone_paksus"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/kalendri_tabel"
                                            android:name="com.vaskjala.vesiroosi20.pillipaevik.HarjutusteKalenderActivity"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_above="@+id/aluminejoon"
                                            android:layout_below="@+id/uleminejoon"
                                            app:layoutManager="LinearLayoutManager"
...
