...
                android:text="@string/arhiivis"/>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/eraldusjoone_paksus"
            android:background="@android:color/white"/>
    <ListView android:id="@+id/harjutuslist"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pillipaevik_peamine_taust"
              android:choiceMode="singleChoice"
              android:dividerHeight="@dimen/eraldusjoone_paksus"
              android:divider="@android:color/white"/>
...
